my-app/backendgo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backendgo
  namespace: neowaytc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backendgo
  template:
    metadata:
      labels:
        app: backendgo
    spec:
      containers:
        - name: backendgo
          image: m2tx/neowaytc-backendgo:0.0.4
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: backendgo
  namespace: neowaytc
spec:
  ports:
    - port: 8081
  selector:
    app: backendgo
