my-app/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres12
  namespace: neowaytc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres12
  template:
    metadata:
      labels:
        app: postgres12
    spec:
      containers:
        - name: postgres12
          image: postgres:12-alpine
          ports:
            - containerPort: 5432
          readinessProbe:
            exec:
              command: ["pg_isready", "-q", "-d", "db", "-U", "postgres"]
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: postgres12
  namespace: neowaytc
spec:
  ports:
    - port: 5432
  selector:
    app: postgres12
